<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_pop_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sheet_exit_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_rect_white_top"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/exit_app"
            android:textAllCaps="false"
            android:textColor="@color/danger_red" />

        <View
            android:id="@+id/v_split"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/btn_sheet_exit_app"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/normal_gray"></View>


        <Button
            android:id="@+id/btn_sheet_log_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_split"
            android:background="@drawable/shape_round_rect_white_bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/log_off"
            android:textAllCaps="false"
            android:textColor="@color/theme_color" />

    <Button
        android:id="@+id/btn_sheet_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sheet_log_off"
        android:layout_margin="5dp"
        android:background="@drawable/shape_round_rect_white_block"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:textColor="@color/theme_color" />
</RelativeLayout>