<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_head"></include>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/rl_head"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_forget_password_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_des"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>

            <RelativeLayout
                android:id="@+id/rl_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginRight="-2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_gray_frame">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_white_under_line_bg"
                    android:hint="@string/username_hint"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/edt_mailbox"
                    android:layout_below="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/white"
                    android:hint="@string/mailbox_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_send_to_mail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/rl_input"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_round_rect_theme_block">

                <TextView
                    android:id="@+id/tv_send_to_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <sl.base.ui.loading.AVLoadingIndicatorView
                    android:id="@+id/v_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    app:indicatorColor="@color/white"
                    app:indicator="LineScalePulseOut" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>