<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/sv_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@mipmap/ic_launcher"
                android:src="@drawable/shape_round_black_frame_bg" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/default_value"
                android:textColor="@color/theme_color"
                android:textSize="18sp" />


            <RelativeLayout
                android:id="@+id/rl_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_nickname"
                android:layout_marginLeft="-2dp"
                android:layout_marginRight="-2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_gray_frame">


                <RelativeLayout
                    android:id="@+id/rl_account_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white_under_line_bg">

                    <TextView
                        android:id="@+id/tv_account_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/account_info"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_account_info"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/tv_account_info"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@mipmap/icon_right_gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@+id/rl_account_info"
                    android:id="@+id/rl_account_safe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white_under_line_bg">

                    <TextView
                        android:id="@+id/tv_account_safe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/account_safe"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_account_safe"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/tv_account_safe"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@mipmap/icon_right_gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@+id/rl_account_safe"
                    android:id="@+id/rl_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/about"
                        android:textSize="18sp" />

                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_main"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_danger_rect"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
