<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <View
        android:id="@+id/v_split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"></View>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_below="@+id/v_split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_head"></include>
    </RelativeLayout>


    <ScrollView
        android:layout_below="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/edt_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_gray_frame"
                android:layout_marginLeft="-2dp"
                android:layout_marginRight="-2dp"
                android:hint="@string/please_enter_the_original_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <RelativeLayout
                android:id="@+id/rl_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_old_pwd"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="-2dp"
                android:layout_marginRight="-2dp"
                android:background="@drawable/shape_gray_frame">

                <EditText
                    android:id="@+id/edt_new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/please_enter_a_new_password"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/edt_new_pwd"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/normal_gray">

                </View>

                <EditText
                    android:id="@+id/edt_sure_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_new_pwd"
                    android:layout_marginTop="1px"
                    android:background="@color/white"
                    android:hint="@string/please_confirm_the_new_password"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_send_to_mail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_danger_rect"
                android:layout_margin="10dp"
                android:layout_below="@+id/rl_new_pwd"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/tv_modify_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/modify_password"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textSize="16sp"
                    />
                <sl.base.ui.loading.AVLoadingIndicatorView
                    android:id="@+id/v_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:indicator="LineScalePulseOut"
                    app:indicatorColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>