<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <View
        android:id="@+id/v_split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"></View>


    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_split">

        <include layout="@layout/layout_head"></include>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/theme_color"
                android:padding="10dp"
                android:text="@string/safe_setting"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <RelativeLayout
                android:id="@+id/rl_mailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_account"
                android:background="@drawable/shape_white_under_line_bg"
                android:paddingLeft="10dp"
                android:paddingBottom="2dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_mailbox_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/mailbox"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edt_mailbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_mailbox_title"
                    android:background="@color/white"
                    android:gravity="right"
                    android:hint="@string/mailbox"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_mailbox"
                android:background="@drawable/shape_white_under_line_bg"
                android:paddingLeft="10dp"
                android:paddingBottom="2dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/phone"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_phone_title"
                    android:background="@color/white"
                    android:gravity="right"
                    android:hint="@string/phone"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rl_phone"
                android:layout_margin="10dp"
                android:background="@drawable/button_theme_rect"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <sl.base.ui.loading.AVLoadingIndicatorView
                    android:id="@+id/v_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    app:indicator="LineScalePulseOut"
                    app:indicatorColor="@color/white" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_modify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_save"
                android:layout_marginTop="5dp"
                android:background="@color/theme_color"
                android:padding="10dp"
                android:text="@string/password_modify"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/rl_modify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_modify_password"
                android:background="@drawable/shape_white_under_line_bg"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/tv_modify_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/modify_password"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_modify_password_title"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/tv_modify_password_title"

                    android:background="@mipmap/icon_right_gray" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>