<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <View
        android:id="@+id/v_split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"></View>


    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_split">

        <include layout="@layout/layout_head"></include>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_white_under_line_bg"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/tv_username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/username"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_loginName_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_username_title"
                    android:background="@color/white"
                    android:gravity="right"
                    android:paddingRight="8dp"
                    android:text="@string/username"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_username"
                android:background="@drawable/shape_white_under_line_bg"
                android:paddingLeft="12dp"
                android:paddingBottom="2dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/tv_nickname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/nickname"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_nickname_title"
                    android:background="@color/white"
                    android:gravity="right"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/nickname"
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rl_nickname"
                android:layout_margin="10dp"
                android:background="@drawable/button_theme_rect"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                >

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <sl.base.ui.loading.AVLoadingIndicatorView
                    android:id="@+id/v_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    app:indicator="LineScalePulseOut"
                    app:indicatorColor="@color/white" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>